# automated_audition_manager

./: .gitignore  README.md  pyproject.toml
audition_bot/: main.py  scraper.py  utils.py
