[project]
name = "automated-audition-manager"
version = "0.1.0"
description = "Automated Talent Talks audition manager"
authors = [
    {name = "Trehan Christie",email = "trehan2010@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "selenium (>=4.41.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [
{ include = "audition_bot" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
